--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- 
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- 
     - preload images
@@ -135,15 +135,9 @@
 
         </div>
       </section>
-
-
-
-
-
       <!-- 
         - #ABOUT
       -->
-
       <section class="section about" aria-label="about">
         <div class="container">
 
@@ -183,10 +177,6 @@
 
         </div>
       </section>
-
-
-
-
 
       <!-- 
         - #COLLECTION
@@ -291,10 +281,6 @@
         </div>
       </section>
 
-
-
-
-
       <!-- 
         - #FEATURES
       -->
@@ -385,10 +371,6 @@
         </div>
 
       </section>
-
-
-
-
 
       <!-- 
         - #TESTIMONIALS
@@ -495,15 +477,10 @@
 
     </div>
   </footer>
-
-
-
-
-
   <!-- 
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+  <script src="script.js"></script>
 
   <!-- 
     - ionicon link
