--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml">
 
   <!-- 
     - google font link
@@ -32,8 +32,8 @@
   <!-- 
     - preload images
   -->
-  <link rel="preload" as="image" href="./assets/images/hero-banner-1.jpg">
-  <link rel="preload" as="image" href="./assets/images/hero-banner-2.jpg">
+  <link rel="preload" as="image" href="hero-banner-1.jpg">
+  <link rel="preload" as="image" href="hero-banner-2.jpg">
 
 </head>
 
@@ -85,11 +85,6 @@
 
     </div>
   </header>
-
-
-
-
-
   <main>
     <article>
 
@@ -106,7 +101,6 @@
               Speech to Text <br/>
               <span class="span" >Voice Typing & Transcription</span>
             </h1>
-
             <p class="section-text">
               Take notes with your voice for free, or automatically transcribe audio. Secure, accurate & super fast. 
             </p>
@@ -121,16 +115,16 @@
 
           <div class="wrapper">
             <div class="hero-banner-1 img-holder" style="--width: 400; --height: 550;">
-              <img src="./assets/images/hero-banner-1.jpg" width="400" height="550"
+              <img src="hero-banner-1.jpg" width="400" height="550"
                 alt="view of assortment of decor for interior shop" class="img-cover">
             </div>
 
             <div class="hero-banner-2 img-holder" style="--width: 500; --height: 850;">
-              <img src="./assets/images/trans.png" width="500" height="850" alt="ceramic craft ware"
+              <img src="trans.png" width="500" height="850" alt="ceramic craft ware"
                 class="img-cover">
             </div>
 
-            <img src="./assets/images/hero-shape.png" width="570" height="676" alt="laves" class="shape">
+            <img src="hero-shape.png" width="570" height="676" alt="laves" class="shape">
           </div>
 
         </div>
@@ -143,20 +137,20 @@
 
           <div class="wrapper">
             <figure class="about-banner about-banner-1 img-holder" style="--width: 600; --height: 480;">
-              <img src="./assets/images/about-1.jpg" width="600" height="480" loading="lazy" alt="craftman in workshop"
+              <img src="about-1.jpg" width="600" height="480" loading="lazy" alt="craftman in workshop"
                 class="img-cover">
             </figure>
 
           </div>
 
           <figure class="about-banner about-banner-2 " style="--width: 500; --height: 700;">
-            <img src="./assets/images/txt.png" width="500" height="700" loading="lazy"
-              alt="interior view of a leather shop selling belts brac" class="img-cover">
+            <img src="txt.png" width="500" height="700" loading="lazy"
+              alt="img text" class="img-cover">
           </figure>
 
           <div class="about-content">
 
-            <h3 class="h2 section-title">Innovative Design is Our Passion</h3>
+           
 
             <p class="section-text">
               Speechnotes is a reliable and secure web-based speech-to-text tool that enables you to quickly and accurately transcribe your audio
@@ -169,8 +163,8 @@
             </a>
 
             <figure class="about-banner about-banner-3 img-holder" style="--width: 850; --height: 420;">
-              <img src="./assets/images/language.jpg" width="850" height="420" loading="lazy"
-                alt="concentrated artisans in workshop" class="img-cover">
+              <img src="language.jpg" width="850" height="420" loading="lazy"
+                alt="multi" class="img-cover">
             </figure>
 
           </div>
@@ -199,7 +193,7 @@
               <div class="collection-card">
 
                 <figure class="card-banner img-holder" style="--width: 500; --height: 550;">
-                  <img src="./assets/images/voice.gif" width="500" height="550" loading="lazy"
+                  <img src="voice.gif" width="500" height="550" loading="lazy"
                     alt="voice to text" class="img-cover">
                 </figure>
 
@@ -226,7 +220,7 @@
               <div class="collection-card">
 
                 <figure class="card-banner img-holder" style="--width: 500; --height: 550;">
-                  <img src="./assets/images/textvoi.gif" width="500" height="550" loading="lazy"
+                  <img src="textvoi.gif" width="500" height="550" loading="lazy"
                     alt="Leather Craft" class="img-cover">
                 </figure>
 
@@ -253,7 +247,7 @@
               <div class="collection-card">
 
                 <figure class="card-banner img-holder" style="--width: 500; --height: 550;">
-                  <img src="./assets/images/Translation.gif" width="500" height="550" loading="lazy"
+                  <img src="Translation.gif" width="500" height="550" loading="lazy"
                     alt="Home Decoration" class="img-cover">
                 </figure>
 
@@ -265,7 +259,7 @@
                     Unlock a world of communication possibilities with our powerful language translation tool.
                   </p>
 
-                  <a href="./Language Translator App in JavaScript/index.html" class="btn">
+                  <a href="./Language Translator/index.html" class="btn">
                     <span class="span">Click here</span>
 
                     <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -288,7 +282,7 @@
       <section class="feature" aria-label="features">
 
         <div class="feature-banner has-bg-image has-after"
-          style="background-image: url('./assets/images/voc.gif')">
+          style="background-image: url('voc.gif')">
         </div>
 
         <div class="section feature-content">
@@ -297,24 +291,17 @@
             <h2 class="h2 section-title">
               Key Advantages
             </h2><br>
-
-            <!-- <p class="section-text">
-              Curabitur porttitor nulla vitae purus eleifend feugiat. Quisque faucibus sapien, ut porttitor lorem.
-            </p> -->
-
             <ul class="feature-list">
-
               <li>
                 <div class="feature-list-card">
 
                   <div class="card-icon">
-                    <img src="./assets/images/feature-icon-1.svg" width="45" height="45" loading="lazy"
+                    <img src="feature-icon-1.svg" width="45" height="45" loading="lazy"
                       alt="review icon">
                   </div>
 
                   <div>
                     <h3 class="h4 card-title">95% Accurate</h3>
-
                     <p class="card-text">
                       VoiceBox is powered by the leading most accurate speech recognition AI engines by Google & Microsoft.
                     </p>
@@ -327,7 +314,7 @@
                 <div class="feature-list-card">
 
                   <div class="card-icon">
-                    <img src="./assets/images/feature-icon-2.svg" width="45" height="45" loading="lazy"
+                    <img src="feature-icon-2.svg" width="45" height="45" loading="lazy"
                       alt="badge icon">
                   </div>
 
@@ -341,18 +328,16 @@
 
                 </div>
               </li>
-
               <li>
                 <div class="feature-list-card">
 
                   <div class="card-icon">
-                    <img src="./assets/images/feature-icon-3.svg" width="45" height="45" loading="lazy"
+                    <img src="feature-icon-3.svg" width="45" height="45" loading="lazy"
                       alt="money bag icon">
                   </div>
 
                   <div>
                     <h3 class="h4 card-title">Saves you money</h3>
-
                     <p class="card-text">
                       Speechnotes dictation notepad is completely free.
                     </p>
@@ -388,8 +373,7 @@
             <p class="client-name">Sanjeev Sai Sasank</p>
 
             <br>
-
-            <img src="./assets/images/quote.svg" width="50" height="50" loading="lazy" class="icon" alt="quote">
+            <img src="quote.svg" width="50" height="50" loading="lazy" class="icon" alt="quote">
 
           </div>
 
@@ -414,25 +398,25 @@
           <ul class="social-list">
 
             <li>
-              <a href="#" class="social-link">
+              <a href="https://www.facebook.com/sanjeevsai.sasank/?_rdr" class="social-link">
                 <ion-icon name="logo-facebook"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="https://twitter.com/saisasank09?t=N1JWBo5HvOWfGTnwlWV1gA&s=09" class="social-link">
                 <ion-icon name="logo-twitter"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="https://github.com/sai-sasank09" class="social-link">
                 <ion-icon name="logo-github"></ion-icon>
               </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+              <a href="https://in.linkedin.com/in/sanjeev-sai-sasank-pabbaraju-6b0b3b251" class="social-link">
                 <ion-icon name="logo-linkedin"></ion-icon>
               </a>
             </li>
