--- a/Text to speech/index.html
+++ b/Text to speech/index.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">  
+    <title>Text To Speech </title>
+    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <header class="header" >
+      <div class="container">
+  
+        <a href="../index.html" class="logo">Voice Box</a>
+  
+        <nav class="navbar" >
+<!--   
+          <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
+            <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
+          </button>
+   -->
+          <ul class="navbar-list">
+  
+            <li>
+              <a href="../index.html" class="navbar-link">Home</a>
+            </li>
+  
+            <li>
+              <a href="../voice to text/voice_text.html" class="navbar-link">Voice to Text</a>
+            </li>
+  
+            <li>
+              <a href="../Language Translator App in JavaScript/index.html" class="navbar-link">Language Translator</a>
+            </li>
+            <li>
+              <a href="../index.html" class="navbar-link">About Us</a>
+            </li>
+  
+          </ul>
+  
+        </nav>
+  
+        <!-- <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
+          <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
+        </button>
+  
+        <div class="overlay" data-nav-toggler data-overlay></div>
+  
+      </div> -->
+    </header>
+  
+    <div class="wrapper">
+      <img src="text.gif" width="400px" alt=""><br>
+      <header>Text To Speech</header>
+      <form action="#">
+        <div class="row">
+          <label>Enter Text</label>
+          <textarea></textarea>
+        </div>
+        <div class="row">
+          <label>Select Voice</label>
+          <div class="outer">
+            <select></select>
+          </div>
+        </div>
+        <button>Convert To Speech</button>
+      </form>
+    </div>
+
+    <script src="script.js"></script>
+
+  </body>
+  
+</html>
 
