--- a/Language Translator/index.html
+++ b/Language Translator/index.html
@@ -1,1 +1,86 @@
+<!DOCTYPE html>
 
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">  
+    <title>Language Translator</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font Awesome CDN Link for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  </head>
+  <body>
+    <header class="header" >
+      <div class="container">
+  
+        <a href="../index.html" class="logo">Voice Box</a>
+  
+        <nav class="navbar" >
+<!--   
+          <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
+            <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
+          </button>
+   -->
+          <ul class="navbar-list">
+  
+            <li>
+              <a href="../index.html" class="navbar-link">Home</a>
+            </li>
+  
+            <li>
+              <a href="../voice to text/voice_text.html" class="navbar-link">Voice to Text</a>
+            </li>
+  
+            <li>
+              <a href="../Text to speech/index.html" class="navbar-link">Text To Voice</a>
+            </li>
+            <li>
+              <a href="../index.html" class="navbar-link">About Us</a>
+            </li>
+  
+          </ul>
+  
+        </nav>
+  
+        <!-- <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
+          <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
+        </button>
+  
+        <div class="overlay" data-nav-toggler data-overlay></div>
+  
+      </div> -->
+    </header>
+    <div class="trans">
+      <div class="wrapper">
+        <div class="text-input">
+          <textarea spellcheck="false" class="from-text" placeholder="Enter text"></textarea>
+          <textarea spellcheck="false" readonly disabled class="to-text" placeholder="Translation"></textarea>
+        </div>
+        <ul class="controls">
+          <li class="row from">
+            <div class="icons">
+              <i id="from" class="fas fa-volume-up"></i>
+              <i id="from" class="fas fa-copy"></i>
+            </div>
+            <select></select>
+          </li>
+          <li class="exchange"><i class="fas fa-exchange-alt"></i></li>
+          <li class="row to">
+            <select></select>
+            <div class="icons">
+              <i id="to" class="fas fa-volume-up"></i>
+              <i id="to" class="fas fa-copy"></i>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <button>Translate Text</button>
+    </div>
+    
+
+    <script src="countries.js"></script>
+    <script src="script.js"></script>
+
+  </body>
+</html>
