--- a/voice to text/voice_text.html
+++ b/voice to text/voice_text.html
@@ -37,7 +37,7 @@
           </li>
 
           <li>
-            <a href="../Language Translator App in JavaScript/index.html" class="navbar-link">Language Translator</a>
+            <a href="../Language Translator/index.html" class="navbar-link">Language Translator</a>
           </li>
           <li>
             <a href="#" class="navbar-link">About Us</a>
