--- a/Text to speech/index.html
+++ b/Text to speech/index.html
@@ -31,7 +31,7 @@
             </li>
   
             <li>
-              <a href="../Language Translator App in JavaScript/index.html" class="navbar-link">Language Translator</a>
+              <a href="../Language Translator/index.html" class="navbar-link">Language Translator</a>
             </li>
             <li>
               <a href="../index.html" class="navbar-link">About Us</a>
